// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSidebarFooter customize 1`] = `
<div>
  <div
    class="sidebar-footer bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CSidebarFooter component 1`] = `
<div>
  <div
    class="sidebar-footer"
  >
    Test
  </div>
</div>
`;
